# Cemu

./: .gitignore  README.md
.github/workflows/: build-lcemu.yml
src/: CMakeLists.txt  main.cpp
src/LCEMU/: CMakeLists.txt  ext_main.cpp  ext_main.h  macro_manager.h  utils.cpp  utils.h
src/LCEMU/gui/: gui_utils.cpp  gui_utils.h  key_sequence.cpp  key_sequence.h
src/LCEMU/macro_core/: macro_manager.cpp  macro_manager.h  macro_structs.h  vpad_ids.h
src/input/emulated/: VPADController.cpp
